--- a/pages/EmployeePayRollForm.html
+++ b/pages/EmployeePayRollForm.html
@@ -139,8 +139,8 @@
                 <option value="9">9</option>
                 <option value="10">10</option>
                 <option value="11">11</option>
-                <option value="13">13</option>
                 <option value="12">12</option>
+                <option value="13">13</option>
                 <option value="14">14</option>
                 <option value="15">15</option>
                 <option value="16">16</option>
@@ -190,6 +190,19 @@
                 <option value="2018">2018</option>
               </select>
             </div>
+          </div>
+        </div>
+
+        <div class="form-elements">
+          <label for="notes">Notes</label>
+          <textarea id="notes" name="notes" rows="4" cols="50"></textarea>
+        </div>
+
+        <div class="form-elements">
+          <a href="#">Cancel</a>
+          <div class="buttons">
+            <input type="submit" class="submit" />
+            <input type="reset" class="reset" />
           </div>
         </div>
       </div>
