[Darshan]: On Form Submit populate the Employee Payroll Data Object

--- a/pages/EmployeePayRollForm.html
+++ b/pages/EmployeePayRollForm.html
@@ -208,6 +208,7 @@
       </div>
     </form>
 
+    <script src="../js/EmployeePayRollData.js"></script>
     <script src="../js/EmployeePayRollValidation.js"></script>
   </body>
 </html>
